fix positioning of z-index

--- a/src/components/Toaster/Toaster.css
+++ b/src/components/Toaster/Toaster.css
@@ -1,5 +1,5 @@
 .toaster {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -21,4 +21,5 @@
     transition: transform 0.2s ease 0s, opacity 0.2s ease 0s;
     transform: translateY(.5rem);
     opacity: 1;
+    z-index:2;
 }
